--- a/package.json
+++ b/package.json
@@ -13,14 +13,6 @@
   },
   "devDependencies": {
     "@babel/runtime": "^7.3.1",
-    "@commitlint/cli": "^7.0.0",
-    "@commitlint/config-conventional": "^7.0.1",
-    "@commitlint/prompt": "^7.2.1",
-    "@semantic-release/commit-analyzer": "^6.1.0",
-    "@semantic-release/git": "^7.0.5",
-    "@semantic-release/github": "^5.2.1",
-    "@semantic-release/npm": "^5.0.5",
-    "@semantic-release/release-notes-generator": "^7.1.3",
     "@types/react": "^16.8.3",
     "@types/react-native": "^0.62.2",
     "babel-eslint": "^8.2.6",
@@ -30,7 +22,6 @@
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-react-native": "^3.2.1",
-    "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
     "pre-commit": "^1.2.2",
     "prettier": "^1.15.3",
@@ -72,8 +63,6 @@
     "url": "https://github.com/react-native-community/react-native-camera.git"
   },
   "scripts": {
-    "commit": "git-cz",
-    "commitmsg": "commitlint -e $GIT_PARAMS",
     "lint": "eslint src --max-warnings=0",
     "lint:staged": "lint-staged",
     "prettier": "prettier --write",
@@ -103,9 +92,5 @@
       ]
     ]
   },
-  "config": {
-    "commitizen": {
-      "path": "@commitlint/prompt"
-    }
-  }
+  "config": {}
 }
